tests/errors/err_box_type_arity.mix
// ERROR: Box expects exactly 1 type argument
bad(x: Box[int, int])
    x
